src/user.css
/* ... */
.main-trackList-trackListHeaderStuck.main-trackList-trackListHeader {
  border-bottom: none;
  background: none;
}

.main-trackList-statusChangeUp {
  color: var(--green);
}

.main-trackList-playingIcon {
  -webkit-mask-image: var(--equalizer-svg);
  background: var(--spice-text);
  content-visibility: hidden;
}

.main-trackList-selected .main-trackList-playingIcon {
  background: var(--spice-text);
}

.main-trackList-rowImageWithPlay .main-trackList-rowPlayPauseButton {
  width: 24px;
  height: 24px;
}

.main-trackList-rowImageWithPlay .main-trackList-rowImagePlayPauseButton {
  background: rgba(0, 0, 0, 0.5);
  border-radius: var(--border-radius-3);
}

/* headers */

.main-entityHeader-image:not(.main-entityHeader-circle) {
  border-radius: var(--border-radius-1);
}

.x-sortBox-sortDropdown,
.x-filterBox-filterInput,
.x-filterBox-expandButton:focus,
.x-filterBox-expandButton:hover {
  border-radius: var(--border-radius-2) !important;
}

.x-sortBox-sortDropdown {
  color: var(--spice-text);
}

.fIDrcz,
.ghlXvf {
  fill: var(--spice-text);
}

.main-navBar-navBar .fIDrcz {
  fill: var(--spice-alt-text);
}

.x-filterBox-filterInput {
  background-color: rgba(var(--spice-rgb-card), 0.6);
  color: var(--spice-text);
}

.playlist-inlineSearchBox-filterInput::placeholder,
.x-filterBox-filterInput::placeholder {
  color: var(--spice-subtext);
}

.x-filterBox-searchIconContainer {
  color: var(--spice-text);
}

.x-emptyState-container {
  height: auto;
  margin-top: 120px;
}

/* artist page */

.artist-artistOffers-info .artist-artistOffers-description,
.artist-popularTrackList-seeMore {
  color: var(--spice-subtext);
}

.artist-artistOverview-heading,
.artist-artistPick-heading,
.artist-artistAbout-heading,
.QWAQMuWlIwVfc5Cv7hXp,
._1CRNzNyAMFxnnS30JUo {
  margin-bottom: 20px !important;
}

.artist-artistPick-pinnedImage,
.artist-artistOffers-item {
  border-radius: var(--border-radius-2) !important;
}

.artist-artistAbout-container,
.main-entityHeader-background,
.main-entityHeader-background.main-entityHeader-overlay {
  border-radius: var(--border-radius-1);
}

.main-entityHeader-background.main-entityHeader-overlay {
  --bgColor: transparent !important;
  background: none;
}

.artist-artistOffers-item:hover {
  background-color: rgba(var(--spice-rgb-selected-row), 0.05) !important;
}

.artist-artistOffers-item:active {
  background-color: rgba(var(--spice-rgb-selected-row), 0.1) !important;
}

.main-entityHeader-background,
.main-entityHeader-background.main-entityHeader-gradient {
  transform: scale(1) !important;
  margin-top: 48px;
  z-index: -1;
  border-radius: 0;
}

[class='main-entityHeader-backgroundColor'] {
  opacity: min(calc(var(--filter-brightness) + 0.4), 1);
}

.main-entityHeader-container {
  background-image: linear-gradient(to bottom, rgb(255 255 255 / 0%), var(--spice-main));
}

.main-entityHeader-metaDataText,
.main-entityTitle-subtitle,
.main-entityHeader-metaDataText span {
  color: var(--spice-text) !important;
}

._GJZaoUD9ozPvCUDT2Mp {
  border-radius: var(--border-radius-3);
}

/* podcasts */

._q93agegdE655O5zPz6l,
.z7Yl7CIT1AB0y91f_moh,
.UyzJidwrGk3awngSGIwv,
.poz9gZKE7xqFwgk231J4,
.xWm_uA0Co4SXVxaO7wlB {
  color: var(--spice-subtext);
}

.show-trailer-container,
.show-episodeBlock-episodeBlock,
.show-show-episodes > :last-child {
  border-radius: var(--border-radius-1) !important;
}

.show-episodeBlock-episodeBlock:hover {
  background-color: rgba(var(--spice-rgb-selected-row), 0.05);
}

.show-episodeBlock-episodeBlock:active {
  background-color: rgba(var(--spice-rgb-selected-row), 0.1);
}

.show-show-episodes > :last-child {
  padding: 8px 24px;
}

.show-trailer-container,
.show-show-episodes > :last-child {
  background-color: var(--spice-card) !important;
}

/* top bar */

.main-topBar-button,
.main-topBar-buddyFeed,
.main-userWidget-boxCondensed,
.main-topBar-whatsNewFeed {
  background-color: var(--spice-selected-row) !important;
  color: var(--spice-text);
  width: 28px !important;
  height: 28px !important;
  padding: 0;
}

.Fxnb0xe6bL7I7W8V0p6C,
.Root__top-bar .main-avatar-avatar,
.Root__top-bar .main-avatar-avatar div {
  width: 28px !important;
  height: 28px !important;
}

.pEG0W4wkbkrOYURhz82H {
  margin: 0;
}

.main-entityHeader-topbarTitle,
.main-topBar-topbarTitle {
  font-size: 1.4rem;
  font-weight: 700;
  padding-left: 10px;
}

.main-playButton-PlayButton {
  transition: opacity 0.5s, visibility 0.5s !important;
}

.main-playButton-PlayButton.main-playButton-primary {
  padding: 12px;
  padding-bottom: 0px;
  padding-top: 0px;
  height: auto;
}

.main-topBar-topbarContent > .main-playButton-PlayButton.main-playButton-primary {
  margin-top: 10px;
}

/* tab bars */

a[class*='-tabBar-active'] {
  background-color: rgba(var(--spice-rgb-selected-row), 1) !important;
}

a[class*='-tabBar-headerItemLink']:hover {
  background-color: rgba(var(--spice-rgb-selected-row), 0.3);
}

a[class*='-tabBar-headerItemLink']:active {
  background-color: rgba(var(--spice-rgb-selected-row), 0.5);
}

/* search */

.main-topBar-searchBar {
  flex: 0 1 400px;
}

.x-searchInput-searchInputInput {
  background-color: rgba(var(--spice-rgb-selected-row), 0.4) !important;
  color: var(--spice-text) !important;
  border: 1px solid var(--spice-light-border);
  border-radius: var(--border-radius-2) !important;
  padding-right: 72px;
  padding-left: 12px;
  height: 40px !important;
  transition: background-color ease-in 167ms;
}

.x-searchInput-searchInputInput:hover {
  background-color: rgba(var(--spice-rgb-selected-row), 0.6) !important;
}

.x-searchInput-searchInputInput:focus {
  background-color: rgba(var(--spice-rgb-main), 0.7) !important;
  border-bottom: var(--spice-accent) solid 2px;
}

.x-searchInput-searchInputIconContainer {
  flex-direction: row-reverse;
}
/* ... */

